# codex-lsp

./: .gitignore  Cargo.toml  LICENSE  README.md
editors/: neovim.lua  vscode-README.md
editors/vscode/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts  serverPath.ts
editors/zed/: Cargo.toml  README.md  extension.toml
editors/zed/languages/codex/: config.toml
editors/zed/src/: lib.rs
file-search/: Cargo.toml  README.md
src/: backend.rs  completion.rs  diagnostics.rs  document.rs  file_search.rs  fuzzy.rs  lib.rs  main.rs  registry.rs  slash_command.rs  tokens.rs
tests/: file_search.rs
