[package]
name = "codex-file-search"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "codex-file-search"
path = "src/main.rs"

[lib]
name = "codex_file_search"
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5.15"
ignore = "0.4.23"
nucleo = { git = "https://github.com/helix-editor/nucleo.git", rev = "4253de9faabb4e5c6d81d946a5e35a90f87347ee" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
